<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/app_name"
        android:textColor="@color/white"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="12dp"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
          android:id="@+id/library"
          android:layout_width="match_parent"
          android:layout_height="220dp"
          android:backgroundTint="@color/white"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:icon="@drawable/library"
          android:text="@string/library"
         android:textColor="@color/black"
          app:iconGravity="textStart"
          app:iconPadding="8dp"
          app:iconTint="@color/black"
          app:cornerRadius="16dp"/>
      <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:backgroundTint="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/settings"
        android:text="@string/setting"
        android:textColor="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"
        app:cornerRadius="16dp"/>

   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>