<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Settings"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/back_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/setting"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/dark_theme"
                android:textColor="@color/black" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="6dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/share_app"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/share" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/support"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/support" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/user_agreement"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/arrow_forward" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>